@@ -4,6 +4,9 @@ v0.23 (release 2005.10.??):
 - Centralized some of the button code. (emh)
 - Fixed bug that allowed access to uncompleted bases. (emh, Borg[MDQ] for report)
 - Tightened up the save/load functions to allow for better save compatability. (emh)
+- Added ability to destroy bases. (emh, multiple people for suggestion)
+- Reduced (real-world) processor usage. (emh, anonymous for suggestion)
+- Moved savefile location to ~/.endgame/saves (emh, Nescius for patch)
 
 v0.22 (release 2005.10.05):
   [To read about the save file compatibility policy, please see README.txt.]
